--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -46,4 +46,5 @@ $breakpoint-500: 31.25em;
 $breakpoint-600: 37.5em;
 $breakpoint-425: 26.5625em;
 $breakpoint-375: 23.4375em;
+$breakpoint-365: 22.8125em;
 $breakpoint-320: 20em;
