--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -11,6 +11,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -20,6 +21,14 @@ body {
   line-height: 1.3;
   color: #777;
   background-color: var(--color-black);
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-primary-light);
 }
 
 :root {
